[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/interface/UI.gd" type="Script" id=1]
[ext_resource path="res://src/ship/blueprint/BlueprintManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interface/shop/Shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/interface/Helpers/BindButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/interface/Helpers/ActionBindDialog.tscn" type="PackedScene" id=5]

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="BlueprintManager" parent="." instance=ExtResource( 2 )]
__meta__ = {
"_edit_lock_": true
}

[node name="BindButton" parent="BlueprintManager" instance=ExtResource( 4 )]
margin_left = 375.0
margin_top = 139.0
margin_right = 417.0
margin_bottom = 181.0

[node name="Shop" parent="." instance=ExtResource( 3 )]
margin_right = 308.0
__meta__ = {
"_edit_lock_": true
}

[node name="PopUp" type="WindowDialog" parent="."]
visible = true
margin_right = 48.0
margin_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
resizable = true

[node name="ActionBindDialog" parent="." instance=ExtResource( 5 )]
window_title = "Bind Action"
